<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">"SampleDesignSupportLibrary"</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="navigation_view">Navigation View</string>
    <string name="text_input_layout">TextInputLayout\n(Floating labels for editing text)</string>
    <string name="floating_action_button">FloatingActionButton</string>
    <string name="snackbar">Snackbar</string>
    <string name="tabLayout">TabLayout</string>
    <string name="tabLayout_viewpager">TabLayout(ViewPager)</string>
    <string name="coordinator_layout">CoordinatorLayout</string>
    <string name="coordinator_layout_toolbar_scrolling">CoordinatorLayout\n(ToolBar Scrolling)</string>
    <string name="coordinator_layout_collapsing_toolbar">CoordinatorLayout\n(Collapsing Toolbar)</string>
    <string name="coordinator_layout_fab">CoordinatorLayout\n(Floating action button scrolling)</string>

    <string name="header">Drawer Header</string>
    <string name="navigation_sub_header">Sub Header</string>
    <string name="navigation_item_1">Navigation Item 1</string>
    <string name="navigation_item_2">Navigation Item 2</string>
    <string name="navigation_sub_item_1">Navigation Sub Item 1</string>
    <string name="navigation_sub_item_2">Navigation Sub Item 2</string>
</resources>
